# snag

./: Cargo.toml  LICENSE  README.md  SKILL.md
cli/: Cargo.toml
cli/src/: file.rs  main.rs  submit.rs
docs/: report-bundle-v1.md
lib/: Cargo.toml
lib/src/: lib.rs  redact.rs
src/: bundle.rs  check.rs  detect.rs  file.rs  main.rs  registry.rs  submit.rs
