[package]
name = "snag"
version = "0.1.0"
edition = "2024"
description = "Auto-detect project, check for duplicates, file GitHub issues on the right repo"
license = "MIT"
repository = "https://github.com/heurema/snag"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
