[package]
name = "snag-cli"
version = "0.1.0"
edition = "2024"
description = "Hit a snag? File it."
license = "MIT"
repository = "https://github.com/heurema/snag"

[[bin]]
name = "snag"
path = "src/main.rs"

[dependencies]
snag-lib = { path = "../lib" }
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"
